a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cheuk_siow/invalidtype4.min
# Invalid type program 4: multiply int and float then store to int.

var x: int;
var y: float;
var z: int;

x = 10;
y = 1.0;
z = x * y;

